# app-conflux

./: Cargo.toml  README.md  ledger_app.toml
docs/: APDU.md  COMMANDS.md  MISC.md
docs/how-to-use/: readme.md
src/: consts.rs  crypto.rs  main.rs  settings.rs
src/app_ui/: address.rs  menu.rs  sign.rs
src/cfx_addr/: consts.rs  mod.rs  types.rs  utils.rs
src/handlers/: get_public_key.rs  get_version.rs  personal_sign.rs  sign_tx.rs
src/types/: mod.rs  primitives.rs  transaction.rs
tests/: conftest.py  test_appname_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  utils.py
tests/application_client/: command_sender.py  response_unpacker.py  transaction.py
