[package]
name = "conflux"
version = "2.2.1"
authors = ["Conflux Foundation"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.29.0"
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
# numtoa = "0.2.4"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
uint = { version = "0.10.0", default-features = false }
rlp-decoder = { version = "0.1.0", default-features = false }
bigdecimal = { version = "0.4.8", default-features = false }

[dev-dependencies]
rustc-hex = { version = "2.1.0", default-features = false }

[profile.release]
opt-level = 'z'
lto = true

[features]
default = []

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/503'"]
name = "Conflux"

[package.metadata.ledger.nanox]
icon = "icons/cfx_14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/cfx_14.gif"

[package.metadata.ledger.stax]
icon = "icons/cfx_32.gif"

[package.metadata.ledger.flex]
icon = "icons/cfx_40.gif"

[package.metadata.ledger.apex_p]
icon = "icons/cfx_32.png"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }